# task-assignment

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: config.yaml  llm_annotation.yaml
config/annotator/: imdb.yaml  poem_sentiment.yaml  sst2.yaml  tweet_eval.yaml
config/dataset/: anli.yaml  cifar10.yaml  cifar100.yaml  ethos.yaml  ethos_vocab.yaml  hatexplain.yaml  hatexplain_vocab.yaml  imdb.yaml  imdb_vocab.yaml  mnist.yaml  multinli.yaml  poem_sentiment.yaml  poem_sentiment_vocab.yaml  shinra.yaml  spiral.yaml  spiral_area.yaml  spiral_area_classification.yaml  spiral_area_overrap.yaml  spiral_classification.yaml  spiral_different_n.yaml  spiral_different_n_classification.yaml  spiral_overrap.yaml  spiral_test_num.yaml  sst2.yaml  sst2_vocab.yaml  tweet_eval.yaml  tweet_eval_vocab.yaml
config/experiment/: spiral_different_test_num_confusion.yaml  spiral_different_test_num_confusion_cost.yaml  tweet_eval_confusion.yaml  tweet_eval_confusion_cost_const.yaml  tweet_eval_icrowd_assignment.yaml  tweet_eval_learning_to_defer_assignment.yaml
config/model/: common_confusion.yaml  confusion.yaml  icrowd.yaml  linear.yaml
config/trainer/: icrowd.yaml  learning_to_defer.yaml  multinli.yaml  sentiment.yaml  shinra.yaml  spiral.yaml  spiral_classification.yaml
data/: tweet_eval_annotated.csv
prompts/: hatexplain.txt  poem_sentiment.txt  sst2.txt  tweet_eval.txt
scripts/: commentout_unused_dataset_configs.sh  prune_experiment_configs.sh
src/: main.py
src/config/: config.py
src/dataset/: __init__.py  (+11 more)
(+28 files in other folders)
