[project]
name = "task-assignment-for-attribute-validation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.3.0",
    "datasets>=3.2.0",
    "gitpython>=3.1.44",
    "hydra-core>=1.3.2",
    "janome>=0.5.0",
    "japanize-matplotlib>=1.1.3",
    "jax>=0.6.0 ; sys_platform == 'darwin'",
    "jax[cuda12]>=0.5.3 ; sys_platform == 'linux'",
    "lightning>=2.5.0.post0",
    "marimo>=0.11.0",
    "matplotlib>=3.10.0",
    "mypy>=1.14.1",
    "nltk>=3.9.1",
    "polars>=1.21.0",
    "pulp>=2.9.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "subword-nmt>=0.3.8",
    "timm>=1.0.14",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "transformers>=4.48.1",
    "typed-argument-parser>=1.10.1",
    "wandb>=0.19.5",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux'" },
  { index = "pytorch-cpu", marker = "sys_platform != 'linux' " },
]
bleurt = { git = "https://github.com/google-research/bleurt.git" }

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "isort>=5.13.2",
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "ruff>=0.9.3",
    "vulture>=2.15",
]
